--- a/Application_Front/web/index.html
+++ b/Application_Front/web/index.html
@@ -24,10 +24,10 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="routing_sirius">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="apple-touch-icon" href="Resources/Logo.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="Resources/Logo.png"/>
 
   <title>routing_sirius</title>
   <link rel="manifest" href="manifest.json">
